tests/baselines/reference/tsxUnionElementType4.errors.txt
tests/cases/conformance/jsx/file.tsx(32,17): error TS2322: Type '{ x: 为真; }' is not assignable to type '(IntrinsicAttributes & IntrinsicClassAttributes<RC1> & { x: 数字; } & { children?: ReactNode; }) | (IntrinsicAttributes & IntrinsicClassAttributes<RC2> & { x: 文字; } & { children?: ReactNode; })'.
  Type '{ x: 为真; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<RC2> & { x: 文字; } & { children?: ReactNode; }'.
    Type '{ x: 为真; }' is not assignable to type '{ x: 文字; }'.
      Types of property 'x' are incompatible.
        Type '为真' is not assignable to type '文字'.
tests/cases/conformance/jsx/file.tsx(33,21): error TS2559: Type '{ x: 10; }' has no properties in common with type 'IntrinsicAttributes & IntrinsicClassAttributes<RC4> & { children?: ReactNode; }'.
tests/cases/conformance/jsx/file.tsx(34,22): error TS2559: Type '{ prop: 为真; }' has no properties in common with type 'IntrinsicAttributes & IntrinsicClassAttributes<RC3> & { children?: ReactNode; }'.


==== tests/cases/conformance/jsx/file.tsx (3 errors) ====
    import React = require('react');
    
    class RC1 extends React.Component<{x : number}, {}> {
        render() {
            return null;
        }
    }
    
    class RC2 extends React.Component<{ x: string }, {}> {
        render() {
            return null;
        }
        private method() { }
    }
    
    class RC3 extends React.Component<{}, {}> {
        render() {
            return null;
        }
    }
    
    class RC4 extends React.Component<{}, {}> {
        render() {
            return null;
        }
    }
    
    var RCComp = RC1 || RC2;
    var EmptyRCComp = RC3 || RC4;
    var PartRCComp = RC1 || RC4;
    // Error
    let a = <RCComp x />;
                    ~
!!! error TS2322: Type '{ x: 为真; }' is not assignable to type '(IntrinsicAttributes & IntrinsicClassAttributes<RC1> & { x: 数字; } & { children?: ReactNode; }) | (IntrinsicAttributes & IntrinsicClassAttributes<RC2> & { x: 文字; } & { children?: ReactNode; })'.
!!! error TS2322:   Type '{ x: 为真; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<RC2> & { x: 文字; } & { children?: ReactNode; }'.
!!! error TS2322:     Type '{ x: 为真; }' is not assignable to type '{ x: 文字; }'.
!!! error TS2322:       Types of property 'x' are incompatible.
!!! error TS2322:         Type '为真' is not assignable to type '文字'.
    let b = <PartRCComp x={10} />
                        ~~~~~~
!!! error TS2559: Type '{ x: 10; }' has no properties in common with type 'IntrinsicAttributes & IntrinsicClassAttributes<RC4> & { children?: ReactNode; }'.
    let c = <EmptyRCComp prop />;
                         ~~~~
!!! error TS2559: Type '{ prop: 为真; }' has no properties in common with type 'IntrinsicAttributes & IntrinsicClassAttributes<RC3> & { children?: ReactNode; }'.
    